@@ -4,13 +4,13 @@ plugins {
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'org.flywaydb.flyway' version '7.11.4'
+  id 'org.flywaydb.flyway' version '7.12.0'
   id 'org.springframework.boot' version '2.5.3'
   id 'org.owasp.dependencycheck' version '6.2.2'
   id 'com.github.ben-manes.versions' version '0.39.0'
   id 'org.sonarqube' version '3.3'
   id "info.solidsoft.pitest" version '1.6.0'
-  id 'au.com.dius.pact' version '4.2.8'
+  id 'au.com.dius.pact' version '4.2.9'
 }
 
 group = 'uk.gov.hmcts.reform'
@@ -94,6 +94,12 @@ tasks.withType(Test) {
   testLogging {
     exceptionFormat = 'full'
   }
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 checkstyle {
@@ -231,6 +237,7 @@ dependencyManagement {
 repositories {
   mavenCentral()
   jcenter()
+  maven { url 'https://jitpack.io' }
 }
 
 ext.libraries = [
@@ -267,7 +274,7 @@ dependencies {
 
   implementation group: 'com.github.java-json-tools', name: 'json-schema-validator', version: '2.2.14', withoutJavaxMailApi
 
-  implementation group: 'org.flywaydb', name: 'flyway-core', version: '7.11.4'
+  implementation group: 'org.flywaydb', name: 'flyway-core', version: '7.12.0'
   implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.23'
   // review following dependency after integrating db structure
   implementation group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '2.12.1'
@@ -290,7 +297,7 @@ dependencies {
   // single import: io.vavr.control.Try
   implementation group: 'io.vavr', name: 'vavr', version: '0.10.4'
 
-  implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.8'
+  implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.9.0'
 
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
@@ -303,6 +310,10 @@ dependencies {
   }
   testImplementation group: 'org.apache.commons', name: 'commons-email', version: '1.5'
   testImplementation group: 'io.github.netmikey.logunit', name: 'logunit-core', version: '1.1.0'
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.2.1', classifier: 'all', {
+    exclude group: 'commons-io', module: 'commons-io'
+    exclude group: 'org.apache.commons', module: 'commons-lang3'
+  }
   testRuntimeOnly group: 'io.github.netmikey.logunit', name: 'logunit-logback', version: '1.1.0'
 
   integrationTestImplementation sourceSets.main.runtimeClasspath
